<?xml version="1.0"?>
<package format="2">
  <name>argo_move_group</name>
  <version>0.0.0</version>
  <description>The argo_move_group package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="dev.siggie@gmail.com">Markus Sigg</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/argo_move_group</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>cmake_modules</depend>
  <depend>boost</depend>
  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>pluginlib</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>argo_move_group_msgs</depend>
  <!--<depend>hector_simox_ros</depend>-->
  <depend>grid_map_ros</depend>
  <depend>grid_map_proc</depend>
  <depend>grid_map_cv</depend>
  <depend>cv_bridge</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <moveit_ros_move_group plugin="${prefix}/argo_move_group_plugin_description.xml"/>
  </export>
</package>
